# SpaceWahou

./: .gitignore  README.md  SpaceWahou.sln  SpaceWahou.vcxproj  vcpkg.json
Sources/: Background.cpp  Background.h  Bonus.cpp  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Main.cpp  Main.h  Map.cpp  Map.h  MathUtils.h  Menu.cpp  Menu.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Ship.cpp  UI.cpp  UI.h
cmake/: CMakeLists.txt  README.md  shell.html
cmake/emscripten/: shell.html
src/: Background.cpp  Background.h  Bonus.cpp  Bonus.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Main.cpp  Main.h  Map.cpp  Map.h  MathUtils.cpp  MathUtils.h  Menu.cpp  Menu.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Ship.cpp  Ship.h  UI.cpp  UI.h
